# project-flara

./: Cargo.toml  LICENSE-MIT  README.md  iter.sh
.github/workflows/: release-dockerhub.yml  release-mobile.yml  release-native.yml
assets/plugins/: com.github.project-flaura.bevy-rpg
framework/: Cargo.toml  README.md
framework/src/: lib.rs  states.rs  stories.rs
launchers/ios/: Cargo.toml
launchers/ios/src/: main.rs
launchers/native/: Cargo.toml
launchers/native/src/: main.rs  native_run.rs
launchers/wasm/: Cargo.toml
launchers/wasm/src/: main.rs
plugin-system/: Cargo.toml
plugin-system/src/: lib.rs
src/: README.md  lib.rs  state.rs
src/back_button/: mod.rs
src/cursor/: mod.rs
src/invisible_to_focus/: mod.rs
src/main_screen/: mod.rs
src/map/: mod.rs
src/rhythm/: mod.rs
src/startup/: mod.rs  startup.rs  startup_screen.rs  title.rs
src/story/: chapter_menu.rs  dialog_run.rs  events.rs  main_story.rs  menu.rs  mod.rs  story_loading.rs
src/story/story_loading/: README.md  dylib.rs  mod.rs  stories.rs
src/ui/: main.rs  mod.rs  startup.rs  title.rs
story/foundation/: Cargo.toml
story/foundation/src/: intro.rs  lib.rs
story/mainline/boutique/: Cargo.toml
story/mainline/boutique/src/: a_new_staff.rs  lib.rs  unseen_circumstances.rs
story/mainline/cafe/: Cargo.toml
story/mainline/cafe/src/: lib.rs
story/mainline/foundation/: Cargo.toml
story/mainline/foundation/src/: family_blossoms.rs  lib.rs  prelude.rs  prelude_after_login.rs
utils/: Cargo.toml
utils/src/: lib.rs
