[package]
name = "ios-launcher"
version = "0.1.0"
edition = "2021"
description = "Bevy cross platform template"

[package.metadata.bundle]
name = "ios-launcher"
identifier = "com.example.ios-launcher"
icon = ["assets/bevy.png"]
resources = ["assets"]


[dependencies]
project-flara = { package = "project-flara", path = "../.." }

bevy = { version = "0.9.1", features = ["dynamic"] }
image = "0.24.5"
winit = "0.27.5"
