[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
project-flara = { package = "project-flara", path = "../.." }

bevy = { version = "0.9.1", features = ["dynamic"] }
image = "0.24.5"
winit = "0.27.5"
miette = { version = "5.5.0", features = ["fancy"] }
