[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[[bin]]
name="native-launcher"
path="src/main.rs"

[dependencies]
project-flara = { package = "project-flara", path = "../.." }
miette = { version = "5.5.0", features = ["fancy"] }

bevy = { version = "0.9.1", features = ["dynamic"] }
image = "0.24.5"
winit = "0.27.5"
