[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
project-flara = { package = "project-flara", path = "../.." }

bevy = { version = "0.9.1", features = ["dynamic"] }
web-sys = { version="0.3.60", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.10.1", features=["yew_integration"] }